syntax = "proto3";

package proto;

option go_package = "server/data";

service TunnelData {
  rpc ForwardData(stream DataPacket) returns (stream DataPacket);
}

message DataPacket {
  string tunnel_id = 1;
  bytes data = 2;
}
